...
        tools:layout_conversion_absoluteHeight="30dp"
        tools:layout_conversion_absoluteWidth="100dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp" />

    <EditText
        android:id="@+id/restTime"
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textColor="@color/colorText"
        tools:layout_conversion_absoluteHeight="45dp"
        tools:layout_conversion_absoluteWidth="411dp"
...
        tools:layout_conversion_absoluteHeight="30dp"
        tools:layout_conversion_absoluteWidth="106dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="85dp" />

    <EditText
        android:id="@+id/workTime"
        android:layout_width="386dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        tools:layout_conversion_absoluteHeight="45dp"
        tools:layout_conversion_absoluteWidth="392dp"
        tools:layout_editor_absoluteX="10dp"
...
